# portfolio-rebalancer

./: .gitignore  LICENSE  README.md  compose.vps.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/: README.md  app.py  schemas.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/assets/: page.tsx
frontend/app/auth/: AuthProvider.tsx
frontend/app/components/: AllocationSliders.tsx  Header.tsx  SummaryCards.tsx  ThemeToggle.tsx  TradesTable.tsx
frontend/app/learn/: page.tsx
frontend/app/login/: page.tsx
frontend/app/portfolio/: PortfolioContainer.tsx  page.tsx
frontend/app/portfolio/components/: ConfirmDialog.tsx  PortfolioFilters.tsx  PortfolioTable.tsx
frontend/app/signup/: page.tsx
frontend/app/tools/: page.tsx
frontend/app/tools/calculators/: page.tsx
frontend/app/tools/rebalance/: RebalanceContainer.tsx  page.tsx
frontend/i18n/: I18nProvider.tsx  dictionaries.ts  lang.ts
frontend/lib/: api.ts
spec/: ROADMAP.md  SPEC.md  Sprint1.md
src/portfolio_rebalancer/: cli.py  core.py  execution.py  loaders.py  models.py  rebalance.py  targets_default.py
src/portfolio_rebalancer/api/: app.py  errors.py  jobs.py  main.py  middleware.py  schemas.py  settings.py
src/portfolio_rebalancer/importers/: b3_xlsx.py  csv_export.py
tests/: test_api.py  test_cli.py  test_core.py  test_execution.py  test_import_b3_xlsx.py  test_loaders.py  test_prices_resolution.py
(+13 files in other folders)
