[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-rebalancer"
version = "0.1.0"
description = "Portfolio rebalancer - Python engineering project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "httpx>=0.27",
  "pandas>=2.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Workbook contains no default style, apply openpyxl's default:UserWarning:openpyxl.styles.stylesheet",
]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
portfolio-rebalancer = "portfolio_rebalancer.cli:main"
portfolio-rebalancer-api = "portfolio_rebalancer.api.main:main"

[project.optional-dependencies]
dev = [
  "pytest==8.4.0",
  "ruff==0.9.6",
  "black==25.12.0",
]

